--- a/index.html
+++ b/index.html
@@ -135,19 +135,20 @@
                     <div class="col-md-6">
                         <h1 class="mt-3">My Awesome services</h1>
                         <p class="mt-4 service-paragraph">
-                            I provide services that enhance your digital presence. From responsive web design, complex
-                            dashboards to intuitive mobile apps.
+                            I provide end-to-end services to enhance your digital presence, including frontend and
+                            backend development, API creation, custom web applications, and seamless deployment.
                             <br>
                         <p class="mt-2 service-paragraph">
-                            Turn your ideas into reality with limitless creativity.</p>
+                            Let’s
+                            bring your ideas to life with creativity and technical precision!</p>
                         </p>
                         <div class="d-flex pt-5">
                             <div class="box mr-5">
-                                <span class="service-heading">15+</span>
+                                <span class="service-heading">8+</span>
                                 <h4 class="service-title">Projects</h4>
                             </div>
                             <div class="box">
-                                <span class="service-heading">2+</span>
+                                <span class="service-heading">1+</span>
                                 <h4 class="service-title">Year Experience</h4>
                             </div>
                         </div>
@@ -258,7 +259,7 @@
             </div>
         </div>
 
-        <div class="container" id="portfolio">
+        <div class="container custom-container" id="portfolio">
             <div class="row mt-4">
                 <div class="col-md-12">
                     <span class="">Portfolio</span>
@@ -272,73 +273,106 @@
                     <ul class="splide__list">
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/1.png" alt="Design Concept">
+                                <img src="images/projects/1.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="custom-splide__slide splide__slide ">
-                            <div class="custom-card">
-                                <img src="images/projects/2.png" alt="Design Concept">
-                                <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="custom-splide__slide splide__slide">
-                            <div class="custom-card">
-                                <img src="images/projects/3.png" alt="Design Concept">
-                                <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            City Zoom Cabs
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Online Cab Booking Website</p>
                                 </div>
                             </div>
                         </li>
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/4.png" alt="Design Concept">
+                                <img src="images/projects/2.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            Choice Cars
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Online Cab Bookin Website in UK</p>
                                 </div>
                             </div>
                         </li>
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/5.png" alt="Design Concept">
+                                <img src="images/projects/3.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            YompAid
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Visa Provider Agency in Pakistan</p>
                                 </div>
                             </div>
                         </li>
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/6.png" alt="Design Concept">
+                                <img src="images/projects/4.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Illustration Design Concept</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            ATC Travel Tours
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Visa Provider in Indonesia</p>
                                 </div>
                             </div>
                         </li>
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/7.png" alt="App Redesign">
+                                <img src="images/projects/6.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Earthquake UI App Redesign</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            Al Zaiqa Resto
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Restaurant in Indonesia </p>
                                 </div>
                             </div>
                         </li>
                         <li class="custom-splide__slide splide__slide">
                             <div class="custom-card">
-                                <img src="images/projects/8.png" alt="Data Monitoring App">
+                                <img src="images/projects/5.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
                                 <div class="custom-card-body">
-                                    <h5 class="custom-card-title">Hanaemily</h5>
-                                    <p class="custom-card-text">Company Data Monitoring App</p>
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            Gulbazar
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Ecommerce platform, Pakistan</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="custom-splide__slide splide__slide">
+                            <div class="custom-card">
+                                <img src="images/projects/7.png" style="border-radius: 10px !important;"
+                                    alt="Design Concept">
+                                <div class="custom-card-body">
+                                    <div class="d-flex justify-content-start ">
+                                        <h5 class="custom-card-title">
+                                            Barber 33
+                                        </h5>
+                                    </div>
+
+                                    <p class="custom-card-text">Salon Service in Indonesia</p>
                                 </div>
                             </div>
                         </li>
@@ -433,33 +467,41 @@
     <script src="bootstrap/bootstrap.js"></script>
     <script src="puglins/splide/splide.js"></script>
     <script>
-        document.querySelector('a[download]').addEventListener('click', function () {
-            console.log('CV download triggered.');
-        });
-        const splide = new Splide('.splide', {
-            type: 'loop',
-            drag: 'free',
-            focus: 'center',
-            perPage: 3,
-            autoplay: true,
-            autoScroll: {
-                speed: 1,
-            },
-            breakpoints: {
-                1200: {
-                    perPage: 2, // Show 2 items on screens smaller than 1200px
+        $(document).ready(function () {
+            $('.splide__arrow').replaceAll(`<svg stroke="currentColor" class="arrow-icon" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em"
+                        width="1em" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z">
+                        </path>
+                    </svg>`);
+            document.querySelector('a[download]').addEventListener('click', function () {
+                console.log('CV download triggered.');
+            });
+            const splide = new Splide('.splide', {
+                type: 'loop',
+                drag: 'free',
+                focus: 'center',
+                perPage: 3,
+                autoplay: true,
+                autoScroll: {
+                    speed: 1,
                 },
-                768: {
-                    perPage: 1, // Show 1 item on screens smaller than 768px
+                breakpoints: {
+                    1200: {
+                        perPage: 2, // Show 2 items on screens smaller than 1200px
+                    },
+                    768: {
+                        perPage: 1, // Show 1 item on screens smaller than 768px
+                    },
+                    480: {
+                        perPage: 1, // Keep 1 item on very small screens (for example mobile)
+                        gap: '10px', // Optional: reduce the gap between items for smaller screens
+                    },
                 },
-                480: {
-                    perPage: 1, // Keep 1 item on very small screens (for example mobile)
-                    gap: '10px', // Optional: reduce the gap between items for smaller screens
-                },
-            },
-        });
+            });
 
-        splide.mount();
+            splide.mount();
+        });
     </script>
 </body>
 
