--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="header-background">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 col-md-12 p-3">
+            <div class="col-lg-12 col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand " href="mailto:talhahabib956@gmail.com">
                         <img src="images/email.svg" width="30px" alt=""> <span
@@ -184,7 +184,7 @@
                         </div>
                         <br>
                         <div class="d-flex justify-content-start align-items-center">
-                            <ul>
+                            <ul class="ul-education">
                                 <li>
                                     <div class="details ml-5 mb-4">
                                         <span>Government Post Graduate College ( Hafizabad )</span>
@@ -197,7 +197,7 @@
                         <br>
                         <div class="d-flex justify-content-start align-items-center">
 
-                            <ul>
+                            <ul style="margin-top: 60px;">
                                 <li>
                                     <div class="details ml-5 mb-4">
                                         <span>Misali Public School ( Hafizabad )</span>
