update design and add animation

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/talha.jpg" style="border-radius: 50%;" type="image/x-icon">
     <link rel="stylesheet" href="puglins/splide/splide.css">
+    <link rel="stylesheet" href="puglins/aos/aos.css">
 </head>
 
 <body class="header-background">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light">
+                <nav class="navbar navbar-expand-lg navbar-light" data-aos="zoom-in">
                     <a class="navbar-brand " href="mailto:talhahabib956@gmail.com">
                         <img src="images/email.svg" width="30px" alt=""> <span
                             class="ml-2 brand-email">talhahabib956@gmail.com</span>
@@ -40,9 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#portfolio">Portfolio</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#skills">Skills</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" target="_blank"
                                     href="https://wa.me/+923187341088?text=Hello%20Talha,%20I%20need%20a%20professional%20software%20engineer%20for%20my%20project.%20Let's%20connect!">Contact</a>
@@ -56,7 +57,7 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <center>
-                        <div class="card">
+                        <div class="card" data-aos="zoom-in">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     <img src="images/talha.jpg" class="image mb-2" alt="">
@@ -92,50 +93,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 mt-5">
-                        <div class="details ml-3">
-                            <ul>
-                                <li>
-                                    <span>Frontend Development</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <br>
-                        <div class="details ml-3">
-                            <ul>
-                                <li>
-                                    <span>Backend Development</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <br>
-                        <div class="details ml-3">
-                            <ul>
-                                <li>
-                                    <span>Api Development</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <br>
-                        <div class="details ml-3">
-                            <ul>
-                                <li>
-                                    <span>Custom Web Applications</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <br>
-                        <div class="details ml-3">
-                            <ul>
-                                <li>
-                                    <span>Deployment & Server Configuration</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <br>
-
-                    </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right">
                         <h1 class="mt-3">My Awesome services</h1>
                         <p class="mt-4 service-paragraph">
                             I provide end-to-end services to enhance your digital presence, including frontend and
@@ -145,7 +103,7 @@
                             Let’s
                             bring your ideas to life with creativity and technical precision!</p>
                         </p>
-                        <div class="d-flex pt-5">
+                        <div class="d-flex pt-5 mt-5">
                             <div class="box mr-5">
                                 <span class="service-heading">8+</span>
                                 <h4 class="service-title">Projects</h4>
@@ -156,6 +114,35 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 mt-4 text-center">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="details ml-3 " data-aos="fade-down">
+                                <span>Frontend Development</span>
+                            </div>
+                            <div class="details ml-3" data-aos="fade-left">
+                                <span>Backend Development</span>
+                            </div>
+
+                        </div>
+
+                        <div class="d-flex d-flex justify-content-between align-items-center">
+                            <div class="details ml-3" data-aos="fade-up-right">
+                                <span>Custom Web Applications</span>
+                            </div>
+                            <div class="details ml-3" data-aos="fade-up-left">
+                                <span>Api Development</span>
+                            </div>
+
+                        </div>
+                        <div class="d-flex d-flex justify-content-between align-items-center">
+                            <div class="details detail ml-3" data-aos="fade-up"
+                                data-aos-anchor-placement="bottom-bottom">
+                                <span>Deployment & Server Configuration</span>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -176,8 +163,8 @@
                     <div class="col-md-6 mt-2">
                         <div class="d-flex justify-content-start align-items-center">
                             <ul>
-                                <li>
-                                    <div class="details ml-5 mb-4 mt-4">
+                                <li data-aos="fade-right">
+                                    <div class="ml-5 mb-4 mt-4">
                                         <span>Government College University (Faislabad)</span>
                                         <br>
                                         <span class="detail-paragrapgh">4 Years (2020 - 2024)</span>
@@ -188,8 +175,8 @@
                         <br>
                         <div class="d-flex justify-content-start align-items-center">
                             <ul class="ul-education">
-                                <li>
-                                    <div class="details ml-5 mb-4">
+                                <li data-aos="fade-right">
+                                    <div class=" ml-5 mb-4">
                                         <span>Government Post Graduate College ( Hafizabad )</span>
                                         <br>
                                         <span class="detail-paragrapgh">2 Years (2018 - 2020)</span>
@@ -201,8 +188,8 @@
                         <div class="d-flex justify-content-start align-items-center">
 
                             <ul style="margin-top: 60px;">
-                                <li>
-                                    <div class="details ml-5 mb-4">
+                                <li data-aos="fade-right">
+                                    <div class=" ml-5 mb-4">
                                         <span>Misali Public School ( Hafizabad )</span>
                                         <br>
                                         <span class="detail-paragrapgh">2 Years (2016 - 2018)</span>
@@ -214,8 +201,8 @@
                     <div class="col-md-6 mt-2">
                         <div class="d-flex justify-content-start align-items-center">
                             <ul>
-                                <li>
-                                    <div class="details ml-3 mb-4 mt-4">
+                                <li data-aos="fade-left">
+                                    <div class=" ml-3 mb-4 mt-4">
                                         <span>Bachelor of Science in Information Technology</span>
                                         <br><br>
                                         <span class="detail-paragrapgh text-justify">
@@ -231,8 +218,8 @@
                         <br>
                         <div class="d-flex justify-content-start align-items-center">
                             <ul>
-                                <li>
-                                    <div class="details ml-3 mb-4">
+                                <li data-aos="fade-left">
+                                    <div class=" ml-3 mb-4">
                                         <span>Intermediate in Computer Science</span>
                                         <br><br>
                                         <span class="detail-paragrapgh">I completed my intermediate studies in Computer
@@ -245,8 +232,8 @@
                         <br>
                         <div class="d-flex justify-content-start align-items-center">
                             <ul>
-                                <li>
-                                    <div class="details ml-3 mb-4">
+                                <li data-aos="fade-left">
+                                    <div class=" ml-3 mb-4">
                                         <span>Metric (Science)</span>
                                         <br><br>
                                         <span class="detail-paragrapgh">I completed my matriculation with a focus on
@@ -268,7 +255,7 @@
 
         <div class="container custom-container" id="portfolio">
             <div class="row mt-4">
-                <div class="col-md-12">
+                <div class="col-md-12" data-aos="zoom-out">
                     <span class="">Portfolio</span>
                     <h2 class="mt-4 portfolio-heading w-50">Let's have a look at my portfolio</h2>
                 </div>
@@ -283,7 +270,7 @@
 
                             <a href="https://cityzoomcabs.co.uk/" target="_blank"
                                 style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/1.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -302,7 +289,7 @@
 
                             <a href="https://choicecarswembley.com/" target="_blank"
                                 style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/2.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -320,7 +307,7 @@
                         <li class="custom-splide__slide splide__slide">
                             <a href="https://yompaid.com.pk" target="_blank"
                                 style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/3.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -339,7 +326,7 @@
 
                             <a href="https://www.atctraveltour.com/" target="_blank"
                                 style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/4.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -358,7 +345,7 @@
 
                             <a href="https://www.alzaiqaresto.com/" target="_blank"
                                 style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/6.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -377,7 +364,7 @@
 
                             <a href="#" target="_blank" onclick="openModal()" data-toggle="modal"
                                 data-target="#showModal" style="color: black; text-decoration: none;">
-                                <div class="custom-card">
+                                <div class="custom-card" data-aos="fade-down">
                                     <img src="images/projects/5.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -396,7 +383,7 @@
 
                             <a href="#" onclick="openModalBarber33()" data-toggle="modal"
                                 data-target="#showModalBarber33" style="color: black; text-decoration: none;">
-                                <div class=" custom-card">
+                                <div class=" custom-card" data-aos="fade-down">
                                     <img src="images/projects/7.png" style="border-radius: 10px !important;"
                                         alt="Design Concept">
                                     <div class="custom-card-body">
@@ -447,7 +434,8 @@
             </div>
         </div>
         <div class="" id="skills">
-            <div class="container mt-5 mb-5">
+            <div class="container mt-5 mb-5" data-aos="fade-left" data-aos-anchor="#example-anchor"
+                data-aos-offset="500" data-aos-duration="500">
                 <center>
                     <div class="splide" id="skill_splide">
                         <div class="splide__track">
@@ -576,8 +564,10 @@
     <script src="bootstrap/bootstrap-popper.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
     <script src="puglins/splide/splide.js"></script>
+    <script src="puglins/aos/aos.js"></script>
     <script>
         $(document).ready(function () {
+            AOS.init();
             function openModalBarber33() {
                 $('#showModalBarber33').modal();
             }
