--- a/index.html
+++ b/index.html
@@ -487,12 +487,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 col-sm-5 col-xs-3">
-                    <h1 class="footer-heading mt-5 pt-5 pl-5">
+                    <h1 class="footer-heading mt-5 pt-5 pl-5" data-aos="fade-up">
                         Have an idea?
                         <br>
                         <span style="text-decoration: underline;">Let’s talk about it</span>
                     </h1>
-                    <div class="footer-content">
+                    <div class="footer-content" data-aos="fade-up">
                         <h1 class="footer-email mt-3 pt-5 pl-5">
                             talhahabib956@gmail.com
                         </h1>
@@ -506,7 +506,7 @@
                             <div class="social-icons">
                                 <div class="d-flex">
 
-                                    <div class="icon mr-3">
+                                    <div class="icon mr-3" data-aos="fade-up">
                                         <a href="https://www.linkedin.com/in/talha-habib-software-engineer"
                                             class="icon-link" target="_blank">
                                             <svg stroke="currentColor" fill="currentColor" stroke-width="0"
@@ -518,7 +518,7 @@
                                             </svg>
                                         </a>
                                     </div>
-                                    <div class="icon">
+                                    <div class="icon" data-aos="fade-up">
 
                                         <a href="https://github.com/Talha-Habiib" class="icon-link" target="_blank">
                                             <svg stroke="currentColor" fill="currentColor" stroke-width="0"
@@ -538,7 +538,7 @@
 
                 <div class="col-md-6 col-sm-7">
                     <center>
-                        <div class="footer-image ">
+                        <div class="footer-image " data-aos="fade-up">
                             <img src="images/talha.jpg" class="pt-5 mt-5 img-fluid" alt="">
                             <br>
                             <a href="https://wa.me/+923187341088?text=Hello%20Talha,%20I%20need%20a%20professional%20software%20engineer%20for%20my%20project.%20Let's%20connect!"
